# streamlabs-assignment

./: .gitmodules  README.md
electron-quick-start/: index.html  main.js  package-lock.json  preload.js
streamlabs-assignment/: streamlabs-assignment.sln  streamlabs-assignment.vcxproj  streamlabs-assignment.vcxproj.filters
twitch-addon/: CMakeLists.txt  package-lock.json  package.json
twitch-addon/src/: obs.cpp  obs.hpp  twitch_addon.cpp  unicode.cpp  unicode.hpp
